--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qe-Ee-HpC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ayQ-1a-kZZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -131,7 +131,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vC7-78-wjX">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="veu-f3-icv">
                                     <size key="itemSize" width="200" height="200"/>
@@ -213,10 +213,10 @@
             </objects>
             <point key="canvasLocation" x="-71.200000000000003" y="399.85007496251876"/>
         </scene>
-        <!--View Controller-->
+        <!--Password View Controller-->
         <scene sceneID="av7-ad-Cq1">
             <objects>
-                <viewController id="ayQ-1a-kZZ" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PasswordViewController" id="ayQ-1a-kZZ" customClass="PasswordViewController" customModule="Road_Capture" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qTx-SN-uNL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -247,15 +247,18 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IIq-zH-GI7"/>
                     </view>
+                    <connections>
+                        <outlet property="passwordTextField" destination="RLZ-qJ-F1B" id="pTl-5B-mJb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zqU-Ty-hcS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1936.8" y="-417.8410794602699"/>
+            <point key="canvasLocation" x="-1746" y="-412"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="NKt-nu-Xay">
             <objects>
-                <tabBarController id="1Qe-Ee-HpC" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" id="1Qe-Ee-HpC" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1hy-aR-lp6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -730,28 +733,28 @@
     <resources>
         <image name="cameraTab" width="30" height="30"/>
         <image name="checkBubble" width="30" height="30"/>
-        <image name="endButton" width="333.66665649414062" height="333.33334350585938"/>
+        <image name="endButton" width="333" height="333"/>
         <image name="galleryTab" width="30" height="30"/>
         <image name="helpPage_00" width="375" height="812"/>
-        <image name="helpPage_01" width="375.33334350585938" height="812"/>
-        <image name="helpPage_02" width="375.33334350585938" height="812.33331298828125"/>
-        <image name="helpPage_03" width="375.33334350585938" height="812.33331298828125"/>
-        <image name="helpPage_04" width="375" height="812.33331298828125"/>
-        <image name="helpPage_05" width="375.33334350585938" height="812.33331298828125"/>
-        <image name="helpPage_06" width="375.33334350585938" height="812.33331298828125"/>
-        <image name="helpPage_07" width="375.33334350585938" height="812"/>
-        <image name="helpPage_08" width="375.33334350585938" height="812"/>
-        <image name="helpPage_09" width="375.33334350585938" height="812"/>
-        <image name="helpPage_10" width="375.33334350585938" height="812"/>
-        <image name="helpPage_11" width="375" height="812.33331298828125"/>
-        <image name="helpPage_12" width="375.33334350585938" height="812.33331298828125"/>
-        <image name="helpPage_13" width="375.33334350585938" height="812.33331298828125"/>
-        <image name="helpPage_14" width="375.33334350585938" height="812.33331298828125"/>
+        <image name="helpPage_01" width="375" height="812"/>
+        <image name="helpPage_02" width="375" height="812"/>
+        <image name="helpPage_03" width="375" height="812"/>
+        <image name="helpPage_04" width="375" height="812"/>
+        <image name="helpPage_05" width="375" height="812"/>
+        <image name="helpPage_06" width="375" height="812"/>
+        <image name="helpPage_07" width="375" height="812"/>
+        <image name="helpPage_08" width="375" height="812"/>
+        <image name="helpPage_09" width="375" height="812"/>
+        <image name="helpPage_10" width="375" height="812"/>
+        <image name="helpPage_11" width="375" height="812"/>
+        <image name="helpPage_12" width="375" height="812"/>
+        <image name="helpPage_13" width="375" height="812"/>
+        <image name="helpPage_14" width="375" height="812"/>
         <image name="helpTab" width="30" height="30"/>
         <image name="settingsTab" width="30" height="30"/>
-        <image name="startButton" width="333.66665649414062" height="333.33334350585938"/>
+        <image name="startButton" width="333" height="333"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JzF-IY-gsQ"/>
+        <segue reference="cha-8O-nIJ"/>
     </inferredMetricsTieBreakers>
 </document>
